tests/class_fields/class_constructor_property.js
// @flow

class C1 {
  constructor(): T {} // ok
}

class C2 {
  constructor: T = e; // error
}
